<resources>
    <string name="app_name">Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_all_guests">All Guests</string>
    <string name="menu_present_guests">Present Guests</string>
    <string name="menu_absent_guests">Absent Guests</string>

    <string name="form_name">Name</string>
    <string name="text_form_confirmation">Confimation</string>
    <string name="form_radio_maybe">Not Confirmed</string>
    <string name="form_radio_present">Present</string>
    <string name="form_radio_absent">Absent</string>
    <string name="form_save">Save</string>

    <string name="delete_dialog_title">Guest delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this guest?</string>
    <string name="delete_dialog_positive">Yes</string>
    <string name="delete_dialog_negative">No</string>
</resources>