<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".view.GuestFormActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/form_name"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_form_confirmation"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio_group_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/form_radio_not_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/form_radio_maybe" />

        <RadioButton
            android:id="@+id/form_radio_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_radio_present" />

        <RadioButton
            android:id="@+id/form_radio_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_radio_absent" />
    </RadioGroup>

    <Button
        android:id="@+id/form_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_save"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>
</LinearLayout>