<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_guests">

    <fragment
        android:id="@+id/nav_all_guests"
        android:name="com.vcolofati.convidados.ui.all.AllGuestsFragment"
        android:label="@string/menu_all_guests"
        tools:layout="@layout/fragment_all_guests" />

    <fragment
        android:id="@+id/nav_present_guests"
        android:name="com.vcolofati.convidados.ui.present.PresentGuestsFragment"
        android:label="@string/menu_present_guests"
        tools:layout="@layout/fragment_present_guests" />

    <fragment
        android:id="@+id/nav_absent_guests"
        android:name="com.vcolofati.convidados.ui.absent.AbsentGuestsFragment"
        android:label="@string/menu_absent_guests"
        tools:layout="@layout/fragment_absent_guests" />
</navigation>